--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netime</title>
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/home-style.css">
     <link rel="stylesheet" href="./src/css/reset.css">
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/44ec9fb3c1.js" crossorigin="anonymous"></script>
