add mobile login

--- a/header & footer/header.html
+++ b/header & footer/header.html
@@ -25,6 +25,8 @@
                         <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
                             <a href="#" aria-current="page"><span>TRANG CHỦ</span></a>
                         </li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page mobile"><a href="#"><span>ĐĂNG NHẬP</span></a>
+                        </li>
                         <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="#"><span>THỂ LOẠI</span></a>
                             <ul class="sub-menu">
                         <li class="menu-item menu-item-type-taxonomy menu-item-object-country"><a title="Phim Hành Động" href="#">Phim Hành Động</a>
@@ -189,7 +191,7 @@
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="#"><span>TOP IMDb</span></a>
                 </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="#"><span>TÀI KHOẢN</span></a>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page pc"><a href="#"><span>TÀI KHOẢN</span></a>
                 </li>
                     </ul>
                     </span>
