--- a/phim tq/phim.html
+++ b/phim tq/phim.html
@@ -208,10 +208,16 @@
         </div>
     </header>
         <div id="content">
-            <div class="breadcrumb"><span class="breadcrumb-link-wrap">
-                <a class="breadcrumb-link" href="#">
-                    <span class="breadcrumb-link-text-wrap" itemprop="name">Trang Chủ</span>
-                </a>
+            <div class="breadcrumb">
+                <span class="breadcrumb-link-wrap">
+                    <a class="breadcrumb-link" href="#">
+                        <span class="breadcrumb-link-text-wrap">Trang Chủ</span>
+                    </a>
+                <span aria-label="breadcrumb separator"> / </span>
+                <span class="breadcrumb-link-wrap">
+                    <a class="breadcrumb-link" href="#">
+                        <span class="breadcrumb-link-text-wrap">quốc gia</span>
+                    </a>
                 <span aria-label="breadcrumb separator"> / </span> Phim Trung Quốc
             </div>
             <div class="latest">
