--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body class="home blog">
     <header id="main-menu" class="site-header" role="banner">
         <div class="centernav">
-            <div class="bound">
                 <div class="logo">
                     <a href="#" title="Netime" rel="home">
                         <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
@@ -208,7 +207,6 @@
                     <div class="ms"><i class="fas fa-search"></i>
                     </div>
                     <div class="clear"></div>
-            </div>
         </div>
     </header>
     <div class="slider">
@@ -224,28 +222,86 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <a href="#">
-                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-suicide-squad-diep-vu-cam-tu-2021.jpg" alt="First slide">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-tham-hiem-rung-xanh-2021.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-cuoc-chien-tuong-lai-2021.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-qua-nhanh-qua-nguy-hiem-huyen-thoai-toc-do-2021.jpg" alt="Fourth slide">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-goa-phu-den-2021.jpg" alt="Fourth slide">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Suicide Squad: Điệp Vụ Cảm Tử</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Phiêu Lưu, Phim Hài Hước</span>
+                                </div>
+                                <div class="desc">
+                                    <p>The Suicide Squad tập hợp những nhân vật gồm Bloodsport, Rick Flag, King Shark; Harley Quinn... bắt tay cùng Amanda Waller cho một cuộc trao đổi đầy liều...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-suicide-squad-diep-vu-cam-tu-2021.jpg" title="Suicide Squad: Điệp Vụ Cảm Tử" alt="Suicide Squad: Điệp Vụ Cảm Tử" />
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a href="#">
-                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-godzilla-dai-chien-kong-2021.jpg" alt="Fourth slide">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Thám Hiểm Rừng Xanh</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Phiêu Lưu, Phim Thần Thoại</span>
+                                </div>
+                                <div class="desc">
+                                    <p>Thám Hiểm Rừng Xanh-&nbsp;&nbsp;Jungle Cruise: Phim kể về một cặp đ&ocirc;i đi th&aacute;m hiểm c&ugrave;ng nhau - Frank v&agrave; Lily. Một người l&agrave; thuyền trưởng...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-tham-hiem-rung-xanh-2021.jpg" title="Thám Hiểm Rừng Xanh" alt="Thám Hiểm Rừng Xanh" />
+                    </a>
+                </div>
+                <div class="carousel-item"> 
+                    <a href="#">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Quá Nhanh Quá Nguy Hiểm: Huyền Thoại Tốc Độ</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Phiêu Lưu</span>
+                                </div>
+                                <div class="desc">
+                                    <p>F9 (Fast &amp; Furious 9: Huyền Thoại Tốc Độ) l&agrave; tập thứ ch&iacute;n trong thương hiệu phim h&agrave;nh động đua xe nổi tiếng của Vin Diesel. Phần phim tiếp tục...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-qua-nhanh-qua-nguy-hiem-huyen-thoai-toc-do-2021.jpg" title="Quá Nhanh Quá Nguy Hiểm: Huyền Thoại Tốc Độ" alt="Quá Nhanh Quá Nguy Hiểm: Huyền Thoại Tốc Độ" />
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Góa Phụ Đen</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Viễn Tưỡng</span>
+                                </div>
+                                <div class="desc">
+                                <p>G&oacute;a Phụ Đen - Black Widow (2021) lấy bối cảnh ngay sau sự kiện Captain America: Civil War, lần n&agrave;y nữ điệp vi&ecirc;n phải đối diện với những c&acirc;u hỏi...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-goa-phu-den-2021.jpg" title="Góa Phụ Đen" alt="Góa Phụ Đen" />
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Cuộc Chiến Tương Lai</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Phiêu Lưu, Phim Viễn Tưỡng</span>
+                                </div>
+                                <div class="desc">
+                                    <p>Bộ phim xoay quanh c&acirc;u chuyện viễn cảnh thế giới v&agrave;o năm 2051, c&aacute;c nh&agrave; khoa học đến từ tương lai đ&atilde; c&oacute; một chuyến du h&agrave;nh đến...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-cuoc-chien-tuong-lai-2021.jpg" title="Cuộc Chiến Tương Lai" alt="Cuộc Chiến Tương Lai" />
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <div class="sliderinfo">
+                            <div class="sliderinfolimit"> <span class="name">Mortal Kombat: Cuộc Chiến Sinh Tử</span>
+                                <div class="meta"> <span class="quality">HD</span><span class="text">Thể Loại: Phim Hành Động, Phim Phiêu Lưu, Phim Viễn Tưỡng</span>
+                                </div>
+                                <div class="desc">
+                                    <p>Mortal Kombat: Cuộc Chiến Sinh Tử xoay quanh v&otilde; sĩ v&otilde; thuật tổng hợp Cole Young (Lewis Tan), người mang tr&ecirc;n m&igrave;nh một vết ch&agrave;m rồng đen b&iacute;...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="https://i3.wp.com/image.bongngocdn.com/upload/slide-mortal-kombat-cuoc-chien-sinh-tu-2021.jpg" title="Mortal Kombat: Cuộc Chiến Sinh Tử" alt="Mortal Kombat: Cuộc Chiến Sinh Tử" />
                     </a>
                 </div>
             </div>
