--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="los">
                 <article class="box">
                     <div class="bx">
-                        <a href="#" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù">
+                        <a href="./phim detail/details.html" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù">
                             <div class="limit">
                                 <img src="https://i3.wp.com/image.bongngocdn.com/upload/poster-g-i-joe-xa-nhan-bao-thu-2021.jpg" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù" />
                                 <div class="overlay"> <span class="quality -">HD</span>
