--- a/phim detail/details.html
+++ b/phim detail/details.html
@@ -231,7 +231,7 @@
                             <div class="limage">
                                 <img src="https://i3.wp.com/image.bongngocdn.com/upload/poster-g-i-joe-xa-nhan-bao-thu-2021.jpg" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù">
                             </div>
-                            <div class="button-play"><a class="btn-play" href="#" title="Xem phim G.I. Joe: Xà Nhãn Báo Thù"><i class="fa fa-play"></i> Xem Phim</a>
+                            <div class="button-play"><a class="btn-play" href="/oop project/xem phim/xem.html" title="Xem phim G.I. Joe: Xà Nhãn Báo Thù"><i class="fa fa-play"></i> Xem Phim</a>
                             </div>
                             <div class="rating-prc">
                                 <span class="hidden">
@@ -330,10 +330,10 @@
                         </div>
                         <div id="tags">
                             <h3><label>Keywords:</label>
-                                <span itemprop="keywords">
+                                <span>
                                     <a href="#" title="Phim g.i. joe xà nhãn báo thù">g.i. joe xà nhãn báo thù</a>
                                 </span>, 
-                                <span itemprop="keywords">
+                                <span>
                                     <a href="#" title="Phim snake eyes g.i. joe origins">snake eyes g.i. joe origins</a>
                                 </span>,
                             </h3>
