--- a/phim tq/phim.html
+++ b/phim tq/phim.html
@@ -15,7 +15,7 @@
         <div class="centernav">
             <div class="bound">
                 <div class="logo">
-                    <a href="#" title="Netime" rel="home">
+                    <a href="/oop project/index.html" title="Netime" rel="home">
                         <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
                     </a>
                 </div>
@@ -667,7 +667,7 @@
                     </article>
                     <article class="box">
                         <div class="bx">
-                            <a href="#" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù">
+                            <a href="/oop project/phim detail/details.html" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù">
                                 <div class="limit">
                                     <img src="https://i3.wp.com/image.bongngocdn.com/upload/poster-g-i-joe-xa-nhan-bao-thu-2021.jpg" title="G.I. Joe: Xà Nhãn Báo Thù" alt="G.I. Joe: Xà Nhãn Báo Thù" />
                                     <div class="overlay"> <span class="quality -">HD</span>
