--- a/basic-admin-dashboard-master/themphim.html
+++ b/basic-admin-dashboard-master/themphim.html
@@ -266,6 +266,29 @@
                       class="form-control w-100"
                       type="text"
                     />
+                    <select id="" name="" aria-placeholder="Quốc Gia">
+                      <option value="">Trung Quốc</option>
+                      <option value="">Hàn Quốc</option>
+                      <option value="">Đài Loan</option>
+                      <option value="">Mỹ</option>
+                      <option value="">Châu Âu</option>
+                      <option value="">Nhật Bản</option>
+                      <option value="">Hồng Kông</option>
+                      <option value="">Thái Lan</option>
+                      <option value="">Châu Á</option>
+                      <option value="">Philippin</option>
+                      <option value="">Ấn Độ</option>
+                      <option value="">Na Uy</option>
+                      <option value="">Pháp</option>
+                      <option value="">Đức</option>
+                      <option value="">Singapore</option>
+                      <option value="">Anh</option>
+                      <option value="">Nga</option>
+                      <option value="">Úc</option>
+                      <option value="">Ý</option>
+                      <option value="">Tây Ban Nha</option>
+                      <option value="Canada">Canada</option>
+                    </select>
                     <button
                       class="btn ml-auto bg-teal text-white my-2"
                       type="submit"
