--- a/basic-admin-dashboard-master/slider.html
+++ b/basic-admin-dashboard-master/slider.html
@@ -179,7 +179,8 @@
             <div class="row my-3">
               <div class="col-md-12">
                 <div class="card p-3 shadow">
-                    <select id="" name="" placeholder="Thể Loại" >
+                  <form class="form-inline my-2"> 
+                    <select id="" name="" placeholder="Thể Loại" style="width: 700px;">
                         <option value="">Hành Động</option>
                         <option value="">Phiêu Lưu</option>
                         <option value="">Kinh Dị</option>
@@ -216,6 +217,7 @@
                       >
                         Thêm Phim
                       </button>
+                  </form>
                   <h4 class="my-2 mb-3">Tìm kiếm</h4>
                   <table
                                   class="table table-striped table-inverse"
@@ -260,7 +262,8 @@
                 <div class="row my-3">
                     <div class="col-md-12">
                       <div class="card p-3 shadow">
-                          <select id="" name="" placeholder="Thể Loại" >
+                        <form class="form-inline my-2"> 
+                          <select id="" name="" placeholder="Thể Loại"  style="width: 700px;">
                               <option value="">Hành Động</option>
                               <option value="">Phiêu Lưu</option>
                               <option value="">Kinh Dị</option>
@@ -297,6 +300,7 @@
                             >
                               Thêm Phim
                             </button>
+                        </form>
                         <h4 class="my-2 mb-3">Tìm kiếm</h4>
                         <table
                                   class="table table-striped table-inverse"
@@ -340,7 +344,8 @@
                 <div class="row my-3">
                     <div class="col-md-12">
                       <div class="card p-3 shadow">
-                          <select id="" name="" placeholder="Thể Loại" >
+                        <form class="form-inline my-2"> 
+                          <select id="" name="" placeholder="Thể Loại"  style="width: 700px;">
                               <option value="">Hành Động</option>
                               <option value="">Phiêu Lưu</option>
                               <option value="">Kinh Dị</option>
@@ -377,6 +382,7 @@
                             >
                               Thêm Phim
                             </button>
+                            </form>
                         <h4 class="my-2 mb-3">Tìm kiếm</h4>
                         <table
                                   class="table table-striped table-inverse"
@@ -419,7 +425,8 @@
                       <div class="row my-3">
                         <div class="col-md-12">
                           <div class="card p-3 shadow">
-                              <select id="" name="" placeholder="Thể Loại" >
+                            <form class="form-inline my-2"> 
+                              <select id="" name="" placeholder="Thể Loại"  style="width: 700px;">
                                   <option value="">Hành Động</option>
                                   <option value="">Phiêu Lưu</option>
                                   <option value="">Kinh Dị</option>
@@ -456,6 +463,7 @@
                                 >
                                   Thêm Phim
                                 </button>
+                            </form>
                             <h4 class="my-2 mb-3">Tìm kiếm</h4>
                             <table
                                   class="table table-striped table-inverse"
@@ -498,7 +506,8 @@
                           <div class="row my-3">
                             <div class="col-md-12">
                               <div class="card p-3 shadow">
-                                  <select id="" name="" placeholder="Thể Loại">
+                                <form class="form-inline my-2"> 
+                                  <select id="" name="" placeholder="Thể Loại"  style="width: 700px;">
                                       <option value="">Hành Động</option>
                                       <option value="">Phiêu Lưu</option>
                                       <option value="">Kinh Dị</option>
@@ -535,6 +544,7 @@
                                     >
                                       Thêm Phim
                                     </button>
+                                </form>
                                 <h4 class="my-2 mb-3">Tìm kiếm</h4>
                                 <table
                                   class="table table-striped table-inverse"
