--- a/header & footer/header.html
+++ b/header & footer/header.html
@@ -210,7 +210,14 @@
     </header>
 
     <div id="footer"> 
-        <Copyright class="bgc">Copyright ©2021 NETIME</div>
+        <div class="bgc">
+            <a href="#" title="Netime" rel="home">
+                <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
+            </a>
+            <br>
+            <p>Copyright ©2021 NETIME</p>
+            <p>Liên hệ qua mail:</p>
+        </div>
     </div>
 
     <!-- jquery  -->
