--- a/phim tq/phim.html
+++ b/phim tq/phim.html
@@ -694,9 +694,15 @@
                 <div class="clear"></div>
             </div>
         </div>
-    <div id="footer">
-            <div class="bgc">Copyright ©2021 NETIME</div>
-    </div>
+        <div id="footer"> 
+            <div class="bgc">
+                <a href="#" title="Netime" rel="home">
+                    <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
+                </a>
+                <p>Copyright ©2021 NETIME</p>
+                <p>Liên hệ qua mail:</p>
+            </div>
+        </div>
     <!-- jquery  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./phim.js"></script>
