--- a/index.html
+++ b/index.html
@@ -938,7 +938,14 @@
         </div>
     </div>
     <div id="footer"> 
-        <div class="bgc">Copyright ©2021 NETIME</div>
+        <div class="bgc">
+            <a href="#" title="Netime" rel="home">
+                <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
+            </a>
+            <br>
+            <p>Copyright ©2021 NETIME</p>
+            <p>Liên hệ qua mail:</p>
+        </div>
     </div>
 
     </div> 
