--- a/xem phim/xem.html
+++ b/xem phim/xem.html
@@ -801,7 +801,14 @@
         </div>
     </div>
     <div id="footer"> 
-        <Copyright class="bgc">Copyright ©2021 NETIME</div>
+        <div class="bgc">
+            <a href="#" title="Netime" rel="home">
+                <img src="https://netime.vercel.app/logo.png" alt="" rel="home" />
+            </a>
+            <br>
+            <p>Copyright ©2021 NETIME</p>
+            <p>Liên hệ qua mail:</p>
+        </div>
     </div>
 
     <!-- jquery  -->
